# solid-funicular

./: .dockerignore  Dockerfile  compose.yaml  main.py  pyproject.toml  requirements.in  requirements.txt
src/solid_funicular/: __init__.py  __main__.py  main.py  state.py
