[project]
name = "solid-funicular"
version = "0.1.0"
description = "Discord bot for managing server functions"
requires-python = ">=3.12"
dependencies = [
    "py-cord>=2.5,<3.0.0",
    "python-dotenv>=1.1.1",
]

[project.scripts]
solid-funicular = "solid_funicular.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
